<resources>
    <string name="add_hookah">Добавить кальян</string>
    <string name="start_hookah">Запустить кальян</string>
    <string name="advance_hookah">Провести проходку</string>
    <string name="reset_table">Сбросить стол</string>
    <string name="open_hookahs">Открыть кальяны стола</string>
    <string name="hookahs_title">Кальяны · %1$s</string>
    <string name="hookah_number">Кальян №%1$d</string>
    <string name="hookah_idle">Не запущен</string>
    <string name="hookah_complete">Завершён</string>
    <string name="multiple_hookahs_description">%1$s, кальянов: %2$d. %3$s</string>
    <string name="close_hookahs">Закрыть кальяны</string>
    <string name="hall_command_error">Не удалось сохранить изменение. Попробуйте ещё раз.</string>
    <string name="app_name">HookahTimer</string>
    <string name="hall_title">Зал</string>
    <string name="edit_hall">Редактировать</string>
    <string name="finish_editing">Готово</string>
    <string name="enter_fullscreen">Полный экран</string>
    <string name="exit_fullscreen">Выйти из полного экрана</string>
    <string name="edit_mode_active">Режим редактирования</string>
    <string name="empty_hall_title">Столов пока нет</string>
    <string name="empty_hall_message">Включите режим редактирования и добавьте первый стол</string>
    <string name="add_table">Добавить стол</string>
    <string name="open_hall_actions">Открыть действия зала</string>
    <string name="close_hall_actions">Закрыть действия зала</string>
    <string name="lock_canvas">Зафиксировать рабочую область</string>
    <string name="unlock_canvas">Разблокировать рабочую область</string>
    <string name="venue_logo">Логотип заведения</string>
    <string name="delete_table">Удалить %1$s</string>
    <string name="delete_table_title">Удалить стол?</string>
    <string name="delete_table_message">Стол «%1$s» исчезнет со схемы зала.</string>
    <string name="delete">Удалить</string>
    <string name="cancel">Отмена</string>
    <string name="circle_table_description">Круглый стол %1$s</string>
    <string name="pill_table_description">Стол-пилюля %1$s</string>
    <string name="table_passage_indicator">%1$d/%2$d</string>
    <string name="running_table_description">%1$s, проходка %2$d из %3$d, осталось %4$s</string>
    <string name="ending_soon_table_description">%1$s, проходка %2$d из %3$d, скоро закончится, осталось %4$s</string>
    <string name="overdue_table_description">%1$s, проходка %2$d из %3$d, просрочка %4$s</string>
    <string name="completed_table_description">%1$s, обслуживание завершено</string>
    <string name="table_settings_title">Настройки: %1$s</string>
    <string name="table_name">Название стола</string>
    <string name="table_name_error">Введите название стола</string>
    <string name="table_shape">Форма стола</string>
    <string name="circle_shape">Круг</string>
    <string name="pill_shape">Пилюля</string>
    <string name="canvas_grid_description">Сетка рабочего пространства</string>
    <string name="passages_title">Проходки</string>
    <string name="passage_number">Проходка %1$d</string>
    <string name="passage_duration">Длительность</string>
    <string name="passage_duration_error">Укажите целое число минут больше нуля</string>
    <string name="minutes_short">мин</string>
    <string name="add_passage">Добавить проходку</string>
    <string name="delete_passage">Удалить проходку %1$d</string>
    <string name="save">Сохранить</string>
</resources>
